# BATQuO

./: .gitignore  Dockerfile  README.md  environment.yml  launch_script.sh  main.py  main_pulser.py  main_pulser_parallel.py  main_qiskit.py  main_qiskit_cluster.py  main_qiskit_parallel.py  main_qiskit_recursive.py  main_qiskit_restarts.py  main_qutip.py  main_qutip_parallel.py  p=4_warmup=10_train=100_info.txt  prova_tensorflow.py  pyproject.toml  requirements.txt  send_marconi.sh  visualize_final_state.py  visualize_training_single.py
Pulser/: main.py
clean/: main_pulser.py  p=1_warmup=10_train=100_info.txt  visualize_final_state.py
data/: esempi.py  training_p_1_kernel params.txt
from_scratch/: main_pulser_mod.py  p=1_punti=200_warmup=20_train=180_info.txt  p=2_punti=200_warmup=20_train=180_info.txt  p=3_punti=200_warmup=20_train=180_info.txt
notes/: der.aux  der.tex  info.aux  info.out  info.tex
output/: plot_optimization_paths.py  visualize_training_multiple.py
python/: main.py  simple_main.py
results white kernel/: p=1_warmup=10_train=100_info.txt  p=2_warmup=10_train=100_info.txt  p=3_warmup=10_train=100_info.txt  visualize_training_multiple.py
source/: main_pulser.py  p=1_warmup=10_train=100_info.txt  p=1_warmup=10_train=3_info.txt
src/: main_github.py  main_qutip.py  main_qutip_parallel.py  single_points.py  single_sequence_qaoa.py
utils/: _differentialevolution.py  cost.py  create_graphs.py  default_params.py  gaussian_process.py  graph.py  parameters.py  plotdistribution.py  qaoa.py  qaoa_pulser.py  qaoa_pulser_mod.py  qaoa_qiskit.py  (+2 more)
(+131 files in other folders)
